name added vimal patel

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Hello vimal patel</h1>
+    <h5>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quisquam, architecto mollitia.</h5>
 </body>
 </html>
